force-app/main/default/objects/Account_Team_Role__c/Account_Team_Role__c.object-meta.xml
<CustomObject>
    <label>Account Team Role</label>
    <nameField>
        <label>Account Team Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Team Role</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>