force-app/main/default/objects/Account_Team_Role__c/fields/Account_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Role__c</fullName>
    <label>Account Role</label>
    <length>55</length>
    <type>Text</type>
</CustomField>