force-app/main/default/objects/Account_Team_Role__c/fields/Reviewer_Name__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Team_Role</relationshipName>
    <type>Lookup</type>
</CustomField>